src/objects/User_Role__c.object
<CustomObject>
    <description>For managing project/deployment contacts</description>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Country_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_the_last_Announcement__c</fullName>
        <label>Date of the last Announcement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Manager__r.Name__c &amp; &quot; &quot; &amp;  Manager__r.Surname__c</formula>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User_Role__c</referenceTo>
        <relationshipName>Country_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Mr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RCO Leader</fullName>
                </value>
                <value>
                    <fullName>RCO Regional Leader</fullName>
                </value>
                <value>
                    <fullName>Country General Manager</fullName>
                </value>
                <value>
                    <fullName>Local Project Manager</fullName>
                </value>
                <value>
                    <fullName>Regional CRM Deployment Manager</fullName>
                </value>
                <value>
                    <fullName>CRM Analyst</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Local IT Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Corporate IT Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Leader</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Surname__c</columns>
        <columns>Title__c</columns>
        <columns>Role_Description__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRN-{0000}</displayFormat>
        <label>User Roles Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Roles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>